# ticket-analyzer-api

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  schema.sql
tests/: conftest.py  test_classifier.py  test_domain.py  test_routes.py  test_schemas.py
ticket_analyzer/: classifier.py  config.py  database.py  domain.py  http.py  main.py  orm.py  queries.py  routes.py  schemas.py
ticket_analyzer/llm/: __init__.py  openai.py  providers.py
